--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 title: Megan Brown # your name (or website title) here
 logo: "/images/circle_profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  B.A. in Statistics & Data Science
+  Minor in Business Administration
   <br><br>
-  Second description 
+  Aspiring data scientist with an interest in social and economic problems 
   <br><br>
   <a href="https://www.linkedin.com/in/megan-brown1/">View My LinkedIn Profile</a> 
   
